# meeting-vault-tauri

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
docs/: PRD.md  architecture.md  product-research.md  ui-style-guide.md
docs/adr/: 0001-use-tauri-react-rust.md  0002-local-first-ai-processing.md  0003-json-store-before-sqlite.md  0004-frameless-professional-dark-ui.md  0005-remove-summarization.md  0006-openrouter-summary.md  0007-recording-streaming-to-disk.md  0008-youtube-oauth-integration.md  0009-google-meet-detection.md  0010-microphone-capture-mix.md  0011-speaker-diarization.md
memory-vault/: 00-index.md  01-product-context.md  02-architecture-map.md  03-local-ai-runbook.md  04-agent-handoff.md  05-decision-log.md
scripts/: bootstrap-local-ai.ps1  create-icon.mjs  diarize.py
src/: App.tsx  MeetPromptApp.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ConfirmDialog.tsx  IntegrationsView.tsx  MeetDetectedPrompt.tsx  YoutubeUploadDialog.tsx
