[package]
name = "meeting-vault"
version = "0.1.0"
description = "Desktop meeting recorder, transcript and summary manager"
authors = ["Meeting Vault"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "meeting_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tokio = { version = "1", features = ["fs"] }
uuid = { version = "1", features = ["serde", "v4"] }
